--- a/styles.css
+++ b/styles.css
@@ -44,10 +44,10 @@ body {
 }
 
 .container {
-  padding: 30px 30px;
+  padding: 20px 50px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
 }
 
 .card-header {
@@ -95,7 +95,7 @@ body {
   display: flex;
   flex: wrap;
   gap: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 
 .tag {
@@ -114,11 +114,13 @@ body {
 
 .card-footer {
   display: flex;
+  justify-content: space-evenly;
   flex-wrap: wrap;
   gap: 20px;
 }
 
 button {
+  width: 45%;
   padding: 10px;
   border: none;
   border-radius: 10px;
