--- a/styles.css
+++ b/styles.css
@@ -114,7 +114,7 @@ body {
 
 .card-footer {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
 }
